--- a/frontend/fe-digital-booking/src/components/Header/Header.module.scss
+++ b/frontend/fe-digital-booking/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@use "./../../styles/variables" as *;
+@use './../../styles/variables' as *;
 
 .header-container {
   position: fixed;
@@ -16,11 +16,14 @@
   * {
     cursor: pointer;
   }
-  figure {
-    align-items: flex-end;
-    display: flex;
-    font-style: italic;
-    gap: 7px;
+  a {
+    width: 100%;
+    figure {
+      align-items: flex-end;
+      display: flex;
+      font-style: italic;
+      gap: 7px;
+    }
   }
 }
 
